--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "babel": "([ -d dist ] && rm -rf dist/* || mkdir dist) &&  babel src/index.js -o dist/index.js && chmod u+x dist/index.js",
+    "babel": "([ -d dist ] && rm -rf dist/* || mkdir dist) &&  babel src --out-dir dist && chmod u+x dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
