--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "node-fetch": "^1.7.1",
-    "sqlite3": "3.1.8"
+    "sqlite3": "3.1.8",
+    "unzip": "^0.1.11"
   }
 }
